--- a/centerstar-automotive/public/index.html
+++ b/centerstar-automotive/public/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>React App</title>
+    <title>CenterStar Automotive</title>
 </head>
-<body>
+<body class="bg-black">
 <noscript>You need to enable JavaScript to run this app.</noscript>
 <div id="root"></div>
 </body>
