--- a/centerstar-automotive/public/index.html
+++ b/centerstar-automotive/public/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CenterStar Automotive</title>
+    <link href='https://api.mapbox.com/mapbox-gl-js/v2.8.1/mapbox-gl.css' rel='stylesheet' />
 </head>
 <body class="bg-black">
 <noscript>You need to enable JavaScript to run this app.</noscript>
