favicon and slogan

--- a/centerstar-automotive/public/index.html
+++ b/centerstar-automotive/public/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CenterStar Automotive</title>
+    <title>CenterStar Automotive - Mercedes Benz Specialist in Narre Warren</title>
     <link href='https://api.mapbox.com/mapbox-gl-js/v2.8.1/mapbox-gl.css' rel='stylesheet' />
 </head>
 <body class="bg-black">
